--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
       <br><br>
       <div id="error"></div>
-      <div id='v_data'></div>
+      <table id='v_data'></table>
     </div>
     
     <!-- JavaScript -->
